--- a/index.html
+++ b/index.html
@@ -9,10 +9,38 @@
           maximum-scale=1.0,
           minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+<div class="card" data-qa="card">
+
+  <div class="imac">
+    <img src="images/imac.jpeg" alt="imac">
+  </div>
+  <h2 class="title">Моноблок&nbsp;APPLE&nbsp;A1419&nbsp;iMac 27" Retina 5K (MNED2UA/A)</h2>
+  <p class="product_code">Код товара: 195434</p>
+  <div class="rating">
+    <ul class="stars">
+      <li><img src="images/star-active.svg" alt="star-active"></li>
+      <li><img src="images/star-active.svg" alt="star-active"></li>
+      <li><img src="images/star-active.svg" alt="star-active"></li>
+      <li><img src="images/star-active.svg" alt="star-active"></li>
+      <li><img src="images/star.svg" alt="star"></li>
+    </ul>
+    <span class="reviews">Отзывов: 5</span>
+  </div>
+
+  <div class="product_price">
+      <p class="text">Цена:</p>
+      <p class="value">69 999 грн</p>
+  </div>
+
+  <div><a href="#" class="button" data-qa="hover">Купить</a></div>
+
+</div>
 
 <script type="text/javascript" src="./main.js"></script>
 </body>
